# osmviz

./: .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  RELEASING.md  index.html  pyproject.toml  requirements-mypy.txt  setup.cfg  setup.py  tox.ini
.github/: release-drafter.yml
.github/workflows/: deploy.yml  lint.yml  release-drafter.yml  test.yml
examples/: custom_animations.py  multiple_trackvizs.py  pil_example.py
html/: Makefile  css.css  custom_animations.py.html  download.html  examples.html  index.html  multiple_trackvizs.py.html  osmviz.animation.html  osmviz.html  osmviz.manager.html  pil_example.py.html  py2html.py
src/osmviz/: __init__.py  animation.py  manager.py
test/: README  test.py  test.sh  test_animation.py
test/functional/: test_animation.py  test_manager.py
test/unit/: test_image_manager.py  test_manager.py  test_osm_manager.py  test_pil_image_manager.py
