[metadata]
name = osmviz
description = OSMViz is a small set of Python tools for retrieving and using Mapnik tiles from a Slippy Map server (you may know these as OpenStreetMap images).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hugovk/osmviz
author = Colin Bick and Contributors
author_email = colin.bick@gmail.com
maintainer = Hugo van Kemenade
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Documentation
keywords = osm openstreetmap tiles visualization
project_urls =
    Documentation=https://hugovk.github.io/osmviz/
    Source=https://github.com/hugovk/osmviz
requires =
    PyGame
    PIL

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
package_dir = =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.extras_require]
tests =
    coverage
    pillow>=9.1.0
    pytest
    pytest-cov

[flake8]
max_line_length = 88

[tool:pytest]
addopts =
    -W error::DeprecationWarning
